Added custom font, and expanded the level

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+<style media='screen' type='text/css'>
+    @font-face {
+        font-family: font1;
+        src: url('assets/fonts/origami-mommy.regular.ttf');
+        font-weight:400;
+        font-weight:normal;
+    }
+</style>
+<div style="font-family:font1; position:absolute; left:-1000px; visibility:hidden;">.</div>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
