--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>._.</title>
     <script src="./lib/phaser.js"></script>
-    <script src="./src/Scenes/Load.js"></script>
+    <script src="./src/Classes/screenLoop.js"></script>
     <script src="./src/Classes/enemy.js"></script>
+    <script src="./src/Scenes/GameOver.js"></script>
+    <script src="./src/Scenes/Start.js"></script>
+    <script src="./src/Scenes/Load.js"></script>
     <script src="./src/Scenes/Platformer.js"></script>
     <script src="./src/main.js"></script>
 </head>
